# zephcore

./: .gitignore  README.md
zephcore/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf  west.yml
zephcore/adapters/ble/: ZephyrBLE.cpp  ZephyrBLE.h
zephcore/adapters/board/: ZephyrBoard.cpp  ZephyrBoard.h
zephcore/adapters/clock/: ZephyrMillisecondClock.cpp  ZephyrMillisecondClock.h  ZephyrRTCClock.cpp  ZephyrRTCClock.h
zephcore/adapters/datastore/: ZephyrDataStore.cpp  ZephyrDataStore.h  lfs_128b_erase.c
zephcore/adapters/gps/: ZephyrGPSManager.cpp  ZephyrGPSManager.h
zephcore/adapters/ota/: ota_page.h  ota_page.html  sections-rom.ld  wifi_ota.c  wifi_ota.h
zephcore/adapters/radio/: LR1110Radio.cpp  LR1110Radio.h  LR2021Radio.cpp  LR2021Radio.h  LoRaRadioBase.cpp  LoRaRadioBase.h  SX126xRadio.cpp  SX126xRadio.h  radio_common.h
zephcore/adapters/radio/lr11xx/: lr11xx_hal_zephyr.c  lr11xx_hal_zephyr.h  lr11xx_system_types.h
zephcore/adapters/rng/: RNG.cpp  ZephyrRNG.cpp  ZephyrRNG.h
zephcore/adapters/sensors/: SimpleLPP.h  ZephyrEnvSensors.cpp  ZephyrEnvSensors.h  ZephyrSensorManager.h
zephcore/adapters/usb/: ZephyrCompanionUSB.cpp  ZephyrCompanionUSB.h  ZephyrRepeaterUSB.cpp  ZephyrRepeaterUSB.h
zephcore/app/: CompanionMesh.cpp  CompanionMesh.h  RepeaterDataStore.cpp  RepeaterDataStore.h  RepeaterMesh.cpp  RepeaterMesh.h
zephcore/boards/common/: esp32_common.conf  filesystem.dtsi  logging.conf  mg24_common.conf  nrf52_common.conf  nrf52_partitions_sdv6.dtsi  nrf52_partitions_sdv7.dtsi  nrf54l_common.conf  packet_logging.conf  prod.conf  qspi-ext.dtsi  repeater.conf  sensors-i2c.dtsi  wifi_ota.conf  zephcore_common.conf
zephcore/boards/esp32/lilygo_tlora_c6/: Kconfig.lilygo_tlora_c6  board.conf  board.overlay  board.yml  lilygo_tlora_c6-pinctrl.dtsi  lilygo_tlora_c6_hpcore.dts  lilygo_tlora_c6_hpcore_defconfig
zephcore/boards/esp32/station_g2/: Kconfig.station_g2  board.conf  board.overlay  board.yml  station_g2-pinctrl.dtsi  station_g2_procpu.dts  station_g2_procpu_defconfig
zephcore/boards/esp32/xiao_esp32c3/: board.conf  board.overlay
zephcore/boards/esp32/xiao_esp32c6/: board.conf  board.overlay
zephcore/boards/example_board/: README.md  board.conf  board.overlay
zephcore/boards/mg24/xiao_mg24/: board.conf  board.overlay
zephcore/boards/nrf52840/ikoka_nano_30dbm/: Kconfig.ikoka_nano_30dbm  board.conf  board.yml  ikoka_nano_30dbm-pinctrl.dtsi  ikoka_nano_30dbm.dts  ikoka_nano_30dbm_defconfig
zephcore/boards/nrf52840/rak4631/: board.conf  board.overlay
zephcore/boards/nrf52840/rak_wismesh_tag/: Kconfig.rak_wismesh_tag  board.cmake  board.conf  board.yml  rak_wismesh_tag-pinctrl.dtsi  rak_wismesh_tag.dts  rak_wismesh_tag_defconfig
zephcore/boards/nrf52840/t1000_e/: Kconfig.t1000_e  board.cmake  board.conf  board.overlay  board.yml  t1000_e_nrf52840-pinctrl.dtsi  t1000_e_nrf52840.dts  t1000_e_nrf52840.yaml  t1000_e_nrf52840_defconfig
zephcore/boards/nrf52840/thinknode_m1/: Kconfig.thinknode_m1  board.conf  board.yml  thinknode_m1-pinctrl.dtsi  thinknode_m1.dts  thinknode_m1_defconfig
zephcore/boards/nrf52840/thinknode_m3/: Kconfig.thinknode_m3  board.conf  board.overlay  board.yml  thinknode_m3-pinctrl.dtsi  thinknode_m3.dts  thinknode_m3.yaml  thinknode_m3_defconfig
zephcore/boards/nrf52840/wio_tracker_l1/: Kconfig.wio_tracker_l1  board.cmake  board.conf  board.overlay  board.yml  wio_tracker_l1_nrf52840-pinctrl.dtsi  wio_tracker_l1_nrf52840.dts  wio_tracker_l1_nrf52840.yaml
zephcore/boards/nrf54l/xiao_nrf54l15/: board.conf  board.overlay
zephcore/dts/bindings/: vendor-prefixes.txt
zephcore/dts/bindings/input/: zephcore,input-multi-tap.yaml
zephcore/helpers/: AdvertDataHelpers.cpp  AdvertDataHelpers.h  BaseChatMesh.cpp  BaseChatMesh.h  ChannelDetails.h  ClientACL.cpp  ClientACL.h  CommonCLI.cpp  CommonCLI.h  ContactInfo.h  IdentityStore.h  NodePrefs.h  RateLimiter.h  RegionMap.cpp  RegionMap.h  StatsFormatHelper.h  TransportKeyStore.cpp  TransportKeyStore.h  TxtDataHelpers.h  oled_power.c  oled_power.h
zephcore/helpers/ui/: buzzer.c  buzzer.h  cfb_font_0608.c  display.c  display.h  doom_game.c  doom_game.h  input_multi_tap.c  ui_mesh_actions.cpp  ui_mesh_actions.h  ui_mesh_actions_stubs.c  ui_pages.c  ui_pages.h  ui_task.c  ui_task.h
zephcore/include/mesh/: Board.h  Clock.h  Dispatcher.h  Identity.h  LoRaConfig.h  Mesh.h  MeshCore.h  Packet.h  RNG.h  RTC.h  Radio.h  RadioIncludes.h  SimpleMeshTables.h  StaticPoolPacketManager.h  Utils.h
zephcore/lib/ed25519/: CMakeLists.txt  sha512.h
zephcore/patches/espressif/: 0001-mcuboot-config.patch
zephcore/patches/loramac-node/: 0001-bandwidth-array-ldro.patch
zephcore/patches/zephyr/: 0001-lora-lr11xx-build.patch  0002-lora-sx12xx-common.patch  0003-lora-sx126x-native.patch  0004-lora-sx126x-standalone.patch  0005-gnss-air530z-easy.patch  0006-blobs-py.patch  0007-littlefs-custom-erase.patch
zephcore/patches/zephyr-new/drivers/lora/lr11xx/: Kconfig  lr11xx_lora.c  lr11xx_lora.h
zephcore/patches/zephyr-new/drivers/lora/lr20xx/: lr20xx_lora.c  lr20xx_lora.h
zephcore/patches/zephyr-new/dts/bindings/lora/: semtech,lr1110.yaml
zephcore/patches/zephyr/drivers/gnss/: Kconfig.luatos_air530z  gnss_luatos_air530z.c
zephcore/patches/zephyr/drivers/lora/: CMakeLists.txt  Kconfig
zephcore/patches/zephyr/drivers/lora/lr11xx/: CMakeLists.txt
zephcore/patches/zephyr/scripts/west_commands/: blobs.py
zephcore/scripts/: dfu-flash.ps1
zephcore/src/: Dispatcher.cpp  Identity.cpp  Mesh.cpp  Packet.cpp  StaticPoolPacketManager.cpp  Utils.cpp  main_companion.cpp  main_repeater.cpp
zephcore/sysbuild/: mcuboot.conf
zephcore/tools/formatter/: CMakeLists.txt  prj.conf
zephcore/tools/formatter/boards/rak4631/: board.overlay
zephcore/tools/formatter/boards/wio_tracker_l1/: board.conf
zephcore/tools/formatter/src/: main.c
zephcore/tools/lr1110_updater/: CMakeLists.txt  prj.conf
zephcore/tools/lr1110_updater/boards/t1000_e/: board.overlay
zephcore/tools/lr1110_updater/src/: lr1110_bootloader.c  lr1110_bootloader.h  lr11xx_hal_updater.c  lr11xx_hal_updater.h  main.c
(+5 files in other folders)
